# InsuranceModeling

./: .gitignore  InsuranceModeling.html  InsuranceModeling.qmd  _quarto.yml  pyproject.toml
data/parquet/: freMTPL2sev.parquet  freMTPLsev.parquet
utils/: mcmc_analysis_tools_pystan3.py  mcmc_visualization_tools.py
