[project]
name = "insurancemodeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arviz>=0.20.0",
    "cmdstanpy>=1.2.5",
    "pandas>=2.2.3",
    "pyreadr>=0.5.2",
    "quarto>=0.1.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]
